<resources>
    <string name="app_name">AppAmbit Testing App</string>
    <string name="load">Load</string>
    <string name="analytics">Analytics</string>
    <string name="crashes">Crashes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_default_logerror">Send Default LogError</string>
    <string name="send_default_log_crash">Send Default LogCrash</string>
    <string name="send_logbatches">Send LogBatches</string>
    <string name="generate_logs_for_batch_upload">Generate Logs for Batch upload</string>
    <string name="did_the_app_crash_during_your_last_session">Did the app crash during your last session?</string>
    <string name="user_id">User id</string>
    <string name="change_user_id">Change user id</string>
    <string name="change_user_email">Change user email</string>
    <string name="user_email">User email</string>
    <string name="type_log_message">Type log message</string>
    <string name="send_custom_logerror">Send Custom LogError</string>
    <string name="invalidate_token">Invalidate Token</string>
    <string name="token_refresh_test">Token refresh test</string>
    <string name="send_exception_logerror">Send Exception LogError</string>
    <string name="send_classinfo_logerror">Send ClassInfo LogError</string>
    <string name="generate_the_last_30_daily_errors">Generate the last 30 daily errors</string>
    <string name="generate_the_last_30_daily_crashes">Generate the last 30 daily crashes</string>
    <string name="throw_new_crash">Throw new Crash</string>
    <string name="generate_test_crash">Generate Test Crash</string>
    <string name="send_quot_button_clicked_quot_event_w_property">Send \"Button Clicked\" Event w/ property</string>
    <string name="send_default_event_w_property">Send Default Event w/ property</string>
    <string name="send_max_300_length_event">Send Max-300-Length Event</string>
    <string name="send_max_20_properties_event">Send Max-20-Properties Event</string>
    <string name="send_30_daily_events">Send 30 Daily Events</string>
    <string name="send_batch_of_220_events">Send Batch of 220 Events</string>
    <string name="start_session">Start Session</string>
    <string name="end_session">End Session</string>
    <string name="generate_the_last_30_daily_sessions">Generate the last 30 daily sessions</string>
    <string name="send_500_logs">Send 500 Logs</string>
    <string name="test_message">Test Message</string>
    <string name="send_500_events">Send 500 Events</string>
    <string name="send_500_start_sessions">Send 500 Start Sessions</string>
    <string name="send_500_end_sessions">Send 500 End Sessions</string>
    <string name="send_500_token">Send 500 Token</string>
</resources>