<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="50dp">

    <Button
    android:id="@+id/btnStartSession"
    android:text="@string/start_session"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <Button
    android:id="@+id/btnEndSession"
    android:text="@string/end_session"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <Button
    android:id="@+id/btnGenerate30DaysTestSessions"
    android:text="@string/generate_the_last_30_daily_sessions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>
