<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CrashesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/btnDidCrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/did_the_app_crash_during_your_last_session"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_card_layout"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etUserId"
                android:autofillHints=""
                android:hint="@string/user_id"
                android:inputType="text"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSetUserId"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_user_id" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_card_layout"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etUserEmail"
                android:autofillHints=""
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSetUserEmail"
                android:contentDescription="@string/user_email"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_user_email" />

        </LinearLayout>

        <Button
            android:id="@+id/btnThrowNewCrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/throw_new_crash"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnGenerateTestCrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/generate_test_crash"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnGenerateLast30DailyCrashes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/generate_the_last_30_daily_crashes"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>