<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_card_layout"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etLoadCustomMessage"
                android:autofillHints=""
                android:hint="@string/test_message"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvEventsLabel"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSend500Events"
                android:contentDescription="@string/user_email"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_500_events" />

            <TextView
                android:id="@+id/tvLogsLabel"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSend500Logs"
                android:contentDescription="@string/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_500_logs" />

            <TextView
                android:id="@+id/tvSendSessionsLabel"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSend500Sessions"
                android:contentDescription="@string/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_500_sessions" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>